src/views/Home.module.css
/* ... */
/* SCROLL BUTTONS */
.scrollDownBox1 {
  border: 1px solid white;
  width: 50px;
  align-self: center;
  margin-top: 95vh;
  margin-bottom: 10px;
  text-align: center;
  animation: 2s ease-in-out 0s infinite bounce;
  cursor: pointer;
  border-radius: 5px;
}

.scrollDownBox1:hover {
  background-color: lightgray;
}

.scrollUpBox2 {
  border: 1px solid white;
  width: 50px;
  align-self: center;
  margin-top: 2vh;
  text-align: center;
  animation: 2s ease-in-out 0s infinite bounce;
  cursor: pointer;
  border-radius: 5px;
}

.scrollUpBox2:hover {
  background-color: lightgray;
}

.scrollDownBox2 {
  border: 1px solid white;
  width: 50px;
  align-self: center;
  margin-top: 34vh;
  margin-bottom: 10px;
  text-align: center;
  animation: 2s ease-in-out 0s infinite bounce;
  cursor: pointer;
  border-radius: 5px;
}

.scrollDownBox2:hover {
  background-color: lightgray;
}

.scrollDownBox3 {
  border: 1px solid white;
  width: 50px;
  align-self: center;
  margin-top: 20vh;
  margin-bottom: 10px;
  text-align: center;
  animation: 2s ease-in-out 0s infinite bounce;
  cursor: pointer;
  border-radius: 5px;
}

.scrollDownBox3:hover {
  background-color: lightgray;
}

.scrollDownBox4 {
  border: 1px solid white;
  width: 50px;
  align-self: center;
  text-align: center;
	margin-top: 20px;
  animation: 2s ease-in-out 0s infinite bounce;
  cursor: pointer;
  border-radius: 5px;
}

.scrollDownBox4:hover {
  background-color: lightgray;
}
/* ... */

